--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 	</label>
 	<div class="message">
 		<h1>Hi, my love</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dui ante, venenatis et neque eget, volutpat auctor sem. Phasellus molestie magna quis justo pharetra aliquet. Curabitur tempor efficitur nisl a euismod. Mauris tincidunt lorem vel quam aliquam
-			tincidunt. Nullam sed convallis neque, sit amet scelerisque odio. Proin eu lectus et felis convallis dapibus. Vestibulum facilisis, magna non rutrum gravida, urna ipsum ornare enim, at venenatis sem risus nec est. Mauris enim tortor, rutrum vestibulum
-			cursus eu, efficitur a elit. In maximus mattis euismod. Sed tempus arcu in ultricies condimentum. Vestibulum eu elit quis sapien pulvinar lacinia vitae sit amet augue. Cras massa dolor, egestas sit amet turpis porta, euismod cursus ex. Pellentesque
-			luctus diam eget eros suscipit semper. Sed elementum porta placerat. Cras vulputate justo eros. Aliquam fermentum arcu sed lacus tristique aliquet.</p>
+		<p>hi, babe. honestly, i don’t know what to say right now except— i love you the most. we had our arguments, misunderstanding, and fights.
+			but, what’s important is every time we have so, we always fix it. we don’t let ourselves sleep with a burden heart and heavy minds. 
+			im really thankful that i have someone who couldn’t bring to let me sleep with such heavy thoughts, you have been the peace that the gods offered me. 
+			now that we are one month more to eternity, i am certain that i will only love you— genuinely and unconditionally. my love, we had our silent battles and
+			challenges, and i know we still have a long way to go. however, as long as im with you and you are with me, we will face everything together. without doubt, 
+			my world will revolve around us— for you are my strength and my pride. happy happy 4th month to us, baby. i love you, body and soul, and i would do 
+			anything to keep you in my arms forever. </p>
 	</div>
 </div>
