--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
 	</label>
 	<div class="message">
 		<h1>Hi, my love</h1>
-		<p>hi, babe. honestly, i don’t know what to say right now except— i love you the most. we had our arguments, misunderstanding, and fights.
-			but, what’s important is every time we have so, we always fix it. we don’t let ourselves sleep with a burden heart and heavy minds. 
-			im really thankful that i have someone who couldn’t bring to let me sleep with such heavy thoughts, you have been the peace that the gods offered me. 
-			now that we are one month more to eternity, i am certain that i will only love you— genuinely and unconditionally. my love, we had our silent battles and
-			challenges, and i know we still have a long way to go. however, as long as im with you and you are with me, we will face everything together. without doubt, 
-			my world will revolve around us— for you are my strength and my pride. happy happy 4th month to us, baby. i love you, body and soul, and i would do 
-			anything to keep you in my arms forever. </p>
+		<p>hi, babe. honestly, i don’t know what to say right now except— i love you the most.
+			we had our arguments, misunderstanding, and fights.
+			but, what’s important is every time we have so, we always fix it. 
+			we don’t let ourselves sleep with a burden heart and heavy minds. 
+			im really thankful that i have someone who couldn’t bring to let me
+			sleep with such heavy thoughts, you have been the peace that the gods offered me. 
+			now that we are one month more to eternity, i am certain that i will
+			only love you— genuinely and unconditionally. my love, we had our
+			silent battles and challenges, and i know we still have a long way to go. 
+			however, as long as im with you and you are with me, we will face everything
+			together. without doubt, my world will revolve around us— for you are my 
+			strength and my pride. happy happy 4th month to us, baby. i love you, body
+			and soul, and i would do anything to keep you in my arms forever. </p>
 	</div>
 </div>
